# parsnip

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  CONTRIBUTING.rst  ChangeLog.rst  LICENSE  README.md  README.rst  architecture.md  changelog.rst  conftest.py  contributoragreement.md  credits.rst  pyproject.toml  requirements.in  setup.py  temp.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  requirements-3.10.txt  requirements-3.11.txt  requirements-3.12.txt  requirements-3.13.txt  requirements-3.14.0-rc.2.txt  requirements-3.14.txt  requirements-3.6.txt  requirements-3.7.txt  requirements-3.8.txt  requirements-3.9.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yaml  draft-pdf.yaml  pypi-test-and-publish.yaml  pypi-test-publish.yaml  requirements.yaml  run_tests.yaml  update-uv-lockfiles.sh
_joss/: generate_table_1.py  generate_table_2.py  paper.bib  paper.md  table_1_cifs.txt
doc/: conf.py  requirements.in  requirements.txt
doc/generate_benchmark_plots/: benchmark_parse_modes.py  cif_parsing_benchmark.sh  cif_parsing_benchmark_plot.py  parse_mode_benchmark_plot.py  run_benchmark.sh
doc/source/: betamn.cif  conf.py  credits.rst  development.rst  example_file.cif  example_new_structures.rst  example_noisy.rst  example_simulation.rst  examples.rst  hP3-four-decimal-places.cif  hP3.cif  index.rst  installation.rst  introduction.rst  package-parse.rst  package-patterns.rst  package-supercells.rst  package-unitcells.rst  performance.rst  quickstart.rst
parsnip/: __init__.py  _errors.py  _read_symops.py  _utils.py  conftest.py  oo.py  parse.py  parsemm.py  parsnip.py  patterns.py  symops.json  unitcells.py
test/: output.txt
test/.doctrees/: changelog.doctree  credits.doctree  development.doctree  environment.pickle  index.doctree  installation.doctree  license.doctree  package-parse.doctree  package-patterns.doctree  quickstart.doctree
tests/: conftest.py  requirements-legacy.in  requirements-legacy.txt  requirements.in  requirements.txt  test_ciffile.py  test_docs.py  test_key_reader.py  test_patterns.py  test_symmetry.py  test_table_reader.py  test_unitcells.py  test_utils.py
tests/sample_data/: AFLOW_mC24.cif  B-IncStrDb_Ccmm.cif  CCDC_1446529_Pm-3m.cif  COD_1540955_aP16.cif  COD_7228524.cif  INTENTIONALLY_BAD_CIF.cif  PDB_4INS_head.cif  README.md  cif_file_keys.txt  no42.cif  zeolite_gismondine.cif
tests/sample_data/mbuild_cifs/: README.md  download.sh  extra_blank_field.cif  needs_to_be_wrapped.cif
